--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,8 +1,9 @@
 #root {
-  max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
 
 .logo {
