page logement en cours

--- a/src/assets/styles/Accommodation.sass
+++ b/src/assets/styles/Accommodation.sass
@@ -3,4 +3,57 @@
     text-align: left
     display: flex
     justify-content: space-between
-    ali
+    align-items: flex-start
+    flex-wrap: wrap
+    h1
+        color: #f87171
+
+.host-details
+    display: flex
+    flex-direction: row
+    align-items: center
+    text-align: right
+    .host-name
+        display: flex
+        flex-direction: column
+        align-items: flex-end
+        p
+            margin: 0
+            margin-right: 10px
+    img
+        margin-top: 10px
+        border-radius: 50%
+        width: 50px
+        height: 50px
+
+.accommodation
+    flex-wrap: wrap
+    margin-inline: 100px
+
+.tags-rating
+    width: 100%
+    display: flex
+    justify-content: space-between
+    align-items: center
+    margin-top: 10px
+
+.tags
+    display: flex
+    flex-wrap: wrap
+    .tag
+        background-color: #f87171
+        color: white
+        padding: 5px 10px
+        border-radius: 5px
+        margin-right: 10px
+        margin-bottom: 10px
+
+.rating
+    display: flex
+    margin-top: 10px
+
+.star-filled
+    color: #f87171
+
+.star-empty
+    color: #e0e0e0
