--- a/src/assets/styles/Accommodation.sass
+++ b/src/assets/styles/Accommodation.sass
@@ -1,3 +1,5 @@
+$red: #ff6060
+
 .accommodation-details
     width: 100%
     text-align: left
@@ -5,14 +7,25 @@
     justify-content: space-between
     align-items: flex-start
     flex-wrap: wrap
+    font-family: 'Montserrat', sans-serif
+    margin-top: 30px
+
     h1
-        color: #f87171
+        color: $red
+        margin: 0
+        font-size: 36px
+        font-weight: 500
+    p
+        font-size: 18px
+        font-weight: 500
+        margin: 0
 
 .host-details
     display: flex
     flex-direction: row
     align-items: center
     text-align: right
+    font-family: 'Montserrat', sans-serif
     .host-name
         display: flex
         flex-direction: column
@@ -20,11 +33,15 @@
         p
             margin: 0
             margin-right: 10px
+            font-size: 18px
+            font-weight: 500
+            color: $red
+
     img
         margin-top: 10px
         border-radius: 50%
-        width: 50px
-        height: 50px
+        width: 64px
+        height: 64px
 
 .accommodation
     flex-wrap: wrap
@@ -41,12 +58,16 @@
     display: flex
     flex-wrap: wrap
     .tag
-        background-color: #f87171
+        background-color: $red
         color: white
         padding: 5px 10px
-        border-radius: 5px
+        border-radius: 10px
         margin-right: 10px
         margin-bottom: 10px
+        width: 115px
+        height: 25px
+        font-size: 14px
+        font-weight: 700
 
 .rating
     display: flex
@@ -57,3 +78,41 @@
 
 .star-empty
     color: #e0e0e0
+
+.dropdowns
+    margin-bottom: 30px
+    display: flex
+    justify-content: space-between
+    width: 100%
+
+.dropdown
+    margin-top: 20px
+    margin-bottom: 20px
+    width: 582px
+
+    .dropdown-header
+        background-color: $red
+        color: white
+        padding: 10px 20px 10px 10px
+        border-radius: 10px
+        display: flex
+        justify-content: space-between
+        align-items: center
+        cursor: pointer
+        h2
+            margin: 0
+    p
+        margin-top: 0
+        width: 100%
+        text-align: left
+        background-color: #f6f6f6
+
+    ul
+        margin-top: 0
+        list-style-type: none
+        padding: 0
+        text-align: left
+        background-color: #f6f6f6
+
+        li
+            margin-bottom: 5px
