--- a/src/assets/styles/Accommodation.sass
+++ b/src/assets/styles/Accommodation.sass
@@ -19,6 +19,7 @@ $red: #ff6060
         font-size: 18px
         font-weight: 500
         margin: 0
+        line-height: 140%
 
 .host-details
     display: flex
@@ -116,3 +117,55 @@ $red: #ff6060
 
         li
             margin-bottom: 5px
+
+.carousel-root
+    height: 415px
+
+.carousel
+    height: 100%
+
+.slider-wrapper
+    position: relative
+    overflow: hidden
+    width: 100%
+    height: 100%
+
+    .slider
+        height: 100%
+
+.carousel .slide
+    height: 100%
+    display: flex
+    justify-content: center
+    align-items: center
+
+.carousel .slide img
+    height: 100%
+    object-fit: cover
+    object-position: center
+
+.carousel-arrow
+    position: absolute
+    top: 50%
+    transform: translateY(-50%)
+    background: none
+    border: none
+    font-size: 2rem
+    color: #fff
+    cursor: pointer
+    z-index: 2
+
+    &.carousel-arrow-prev
+        left: 10px
+
+    &.carousel-arrow-next
+        right: 10px
+
+.carousel-indicator
+    position: absolute
+    bottom: 10px
+    left: 50%
+    color: #fff
+    font-size: 18px
+    font-weight: 500
+    font-family: 'Montserrat', sans-serif
