--- a/src/assets/styles/Accommodation.sass
+++ b/src/assets/styles/Accommodation.sass
@@ -4,4 +4,168 @@ $red: #ff6060
     width: 100%
     text-align: left
     display: flex
-    justify-content: space-
+    justify-content: space-between
+    align-items: flex-start
+    flex-wrap: wrap
+    font-family: 'Montserrat', sans-serif
+    margin-top: 30px
+
+    h1
+        color: $red
+        margin: 0
+        font-size: 36px
+        font-weight: 500
+    p
+        font-size: 18px
+        font-weight: 500
+        margin: 0
+        line-height: 140%
+
+.host-details
+    display: flex
+    flex-direction: row
+    align-items: center
+    text-align: right
+    font-family: 'Montserrat', sans-serif
+    .host-name
+        display: flex
+        flex-direction: column
+        align-items: flex-end
+        p
+            margin: 0
+            margin-right: 10px
+            font-size: 18px
+            font-weight: 500
+            color: $red
+
+    img
+        margin-top: 10px
+        border-radius: 50%
+        width: 64px
+        height: 64px
+
+.accommodation
+    flex-wrap: wrap
+    margin-inline: 100px
+
+.tags-rating
+    width: 100%
+    display: flex
+    justify-content: space-between
+    align-items: center
+    margin-top: 10px
+
+.tags
+    display: flex
+    flex-wrap: wrap
+    .tag
+        background-color: $red
+        color: white
+        padding: 5px 10px
+        border-radius: 10px
+        margin-right: 10px
+        margin-bottom: 10px
+        width: 115px
+        height: 25px
+        font-size: 14px
+        font-weight: 700
+
+.rating
+    display: flex
+    margin-top: 10px
+
+.star-filled
+    color: #f87171
+
+.star-empty
+    color: #e0e0e0
+
+.dropdowns
+    margin-bottom: 30px
+    display: flex
+    justify-content: space-between
+    width: 100%
+
+.dropdown
+    margin-top: 20px
+    margin-bottom: 20px
+    width: 582px
+
+    .dropdown-header
+        background-color: $red
+        color: white
+        padding: 10px 20px 10px 10px
+        border-radius: 10px
+        display: flex
+        justify-content: space-between
+        align-items: center
+        cursor: pointer
+        h2
+            margin: 0
+    p
+        margin-top: 0
+        width: 100%
+        text-align: left
+        background-color: #f6f6f6
+
+    ul
+        margin-top: 0
+        list-style-type: none
+        padding: 0
+        text-align: left
+        background-color: #f6f6f6
+
+        li
+            margin-bottom: 5px
+
+.carousel-root
+    height: 415px
+
+.carousel
+    height: 100%
+
+.slider-wrapper
+    position: relative
+    overflow: hidden
+    width: 100%
+    height: 100%
+
+    .slider
+        height: 100%
+
+.carousel .slide
+    height: 100%
+    display: flex
+    justify-content: center
+    align-items: center
+
+.carousel .slide img
+    height: 100%
+    object-fit: cover
+    object-position: center
+
+.carousel-arrow
+    position: absolute
+    top: 50%
+    transform: translateY(-50%)
+    background: none
+    border: none
+    font-size: 2rem
+    color: #fff
+    cursor: pointer
+    z-index: 2
+
+    &.carousel-arrow-prev
+        left: 10px
+
+    &.carousel-arrow-next
+        right: 10px
+
+.carousel-indicator
+    position: absolute
+    bottom: 10px
+    left: 50%
+    color: #fff
+    font-size: 18px
+    font-weight: 500
+    font-family: 'Montserrat', sans-serif
