--- a/src/assets/styles/Banner.sass
+++ b/src/assets/styles/Banner.sass
@@ -1,24 +1,28 @@
 .banner
+    width: 1240px
+    height: 223px
+    border-radius: 25px
+    overflow: hidden
     display: flex
-    flex-wrap: wrap
-    justify-content: space-between
-    height: 68px
-    padding: 45px 100px
+    justify-content: center
+    align-items: center
+    margin: 0 auto
 
-    .logo-container
+    .banner-image
+        background: #000000
+        mix-blend-mode: darken
+        width: 100%
         height: 100%
+        object-fit: cover
+        filter: brightness(50%)
 
-        .logo
-            height: 100%
-            width: auto
-            padding: 0
-
-    .nav-links
-        list-style: none
-        display: flex
-        gap: 57px
-
-        .nav-link
-            color: black
-            font-family: 'Montserrat', sans-serif
-            font-size: 24px
+    .background-text
+        font-family: 'Montserrat', sans-serif
+        position: absolute
+        color: white
+        font-size: 24px
+        font-weight: bold
+        text-align: center
+        z-index: 1
+        font-size: 48px
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 1)
