--- a/src/assets/styles/Footer.sass
+++ b/src/assets/styles/Footer.sass
@@ -10,3 +10,19 @@ footer
 
     p
         font-size: 24px
+
+    @media (max-width: 1024px)
+        padding: 50px 200px 20px 200px
+
+    @media (max-width: 768px)
+        padding: 30px 50px 15px 50px
+        p
+            font-size: 18px
+
+    @media (max-width: 480px)
+        padding: 40px
+        p
+            font-size: 16px
+        .footer-logo
+            width: 100px
+            height: 32px
