--- a/src/assets/styles/Header.sass
+++ b/src/assets/styles/Header.sass
@@ -22,3 +22,16 @@ header
             color: black
             font-family: 'Montserrat', sans-serif
             font-size: 24px
+
+@media (max-width: 425px)
+    header
+        padding: 20px
+
+        .logo-container
+            .logo
+                width: 145px
+                height: auto
+        .nav-links
+            gap: 20px
+            .nav-link
+                font-size: 12px
