--- a/src/assets/styles/Home.sass
+++ b/src/assets/styles/Home.sass
@@ -12,3 +12,9 @@ main
     padding: 20px
     background: $background-color
     border-radius: 10px
+
+    @media (max-width: 1024px)
+        grid-template-columns: repeat(2, 1fr)
+
+    @media (max-width: 768px)
+        grid-template-columns: 1fr
