--- a/src/assets/styles/Banner.sass
+++ b/src/assets/styles/Banner.sass
@@ -12,11 +12,14 @@
         max-height: 180px
 
     @media (max-width: 768px)
+        position: relative
         max-height: 150px
 
     @media (max-width: 480px)
-        position: relative
+        border-radius: 10px
+        width: 335px
         max-height: 120px
+        margin: 0 5%
 
     .banner-image
         background: #000000
