--- a/src/assets/styles/About.sass
+++ b/src/assets/styles/About.sass
@@ -40,6 +40,7 @@
             padding: 10px 20px
             background-color: #f6f6f6
             margin: 0
+            width: auto
 
 .bg-about
     filter: brightness(70%)
