--- a/src/assets/styles/Banner.sass
+++ b/src/assets/styles/Banner.sass
@@ -17,8 +17,8 @@
 
     @media (max-width: 480px)
         border-radius: 10px
-        width: 335px
-        max-height: 120px
+        max-width: 335px
+        max-height: 111px
         margin: 0 5%
 
     .banner-image
@@ -34,7 +34,7 @@
         position: absolute
         color: white
         font-size: 48px
-        font-weight: bold
+        font-weight: 700
         text-align: center
         z-index: 1
         text-shadow: 2px 2px 4px rgba(0, 0, 0, 1)
@@ -45,6 +45,7 @@
             text-align: left
             left: 0
             margin-left: 16px
+            text-shadow: none
 
         @media (max-width: 480px)
             font-size: 18px
