--- a/src/assets/styles/About.sass
+++ b/src/assets/styles/About.sass
@@ -17,13 +17,13 @@
         width: 335px
         gap: 20px
 
-    .dropdown
+    .collapse
         width: 100%
         margin: 0
         border-radius: 5px
         overflow: hidden
 
-        .dropdown-header
+        .collapse-header
             padding: 10px
             display: flex
             justify-content: space-between
