--- a/src/assets/styles/Collapse.sass
+++ b/src/assets/styles/Collapse.sass
@@ -24,9 +24,25 @@ $red: #ff6060
         @media (max-width: 480px)
             font-size: 13px
 
-.collapse-content p
-    margin-top: 0
-    width: 100%
-    text-align: left
-    background-color: #f6f6f6
-    font-size: 13px
+.collapse-content
+    p
+        margin-top: 0
+        width: 100%
+        text-align: left
+        background-color: #f6f6f6
+        font-size: 13px
+
+    ul
+        list-style: none
+        padding-left: 0
+        margin-top: 0
+        margin-bottom: 0
+        text-align: left
+        background-color: #f6f6f6
+
+        li
+            margin-bottom: 5px
+            font-size: 13px
+
+            @media (max-width: 480px)
+                font-size: 12px
