--- a/src/assets/styles/Home.sass
+++ b/src/assets/styles/Home.sass
@@ -3,7 +3,12 @@ $background-color: #f3f4f6
 main
     display: flex
     justify-content: center
+
+.grid-container
     margin-top: 43px
+
+    @media (max-width: 480px)
+        margin-top: 22px
 
 .grid
     display: grid
