--- a/src/assets/styles/Header.sass
+++ b/src/assets/styles/Header.sass
@@ -3,7 +3,7 @@ header
     flex-wrap: wrap
     justify-content: space-between
     height: 68px
-    padding: 45px 100px
+    padding: 45px 0
 
     .logo-container
         height: 100%
@@ -23,9 +23,9 @@ header
             font-family: 'Montserrat', sans-serif
             font-size: 24px
 
-@media (max-width: 425px)
+@media (max-width: 768px)
     header
-        padding: 20px
+        padding: 20px 0
 
         .logo-container
             .logo
@@ -35,3 +35,4 @@ header
             gap: 20px
             .nav-link
                 font-size: 12px
+                text-transform: uppercase
