--- a/src/assets/styles/Accommodation.sass
+++ b/src/assets/styles/Accommodation.sass
@@ -1,8 +1,10 @@
 $red: #ff6060
 
-#root
-    width: 90%
+.accomodation header
+    padding-inline: 0
 
+.accomodation-page
+    margin-inline: 7%
 .accommodation-info
     display: flex
     width: 100%
