--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 #root {
-  margin: 0 auto;
+  margin: 0;
   text-align: center;
   top: 0;
   width: 100%;
@@ -11,9 +11,11 @@
   will-change: filter;
   transition: filter 300ms;
 }
+
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
+
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
@@ -22,6 +24,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
