--- a/src/assets/styles/Header.sass
+++ b/src/assets/styles/Header.sass
@@ -3,7 +3,7 @@ header
     flex-wrap: wrap
     justify-content: space-between
     height: 68px
-    padding: 45px 0
+    padding: 45px
 
     .logo-container
         height: 100%
@@ -25,7 +25,7 @@ header
 
 @media (max-width: 768px)
     header
-        padding: 20px 0
+        padding: 20px
 
         .logo-container
             .logo
